@@ -1,11 +1,11 @@
 README:  Tcl
-    This is the Tcl 8.4.3 source distribution.
+    This is the Tcl 8.4.4 source distribution.
     Tcl/Tk is also available through NetCVS:
 	http://tcl.sourceforge.net/
     You can get any source release of Tcl from the file distributions
     link at the above URL.
 
-RCS: @(#) $Id: README,v 1.49.2.1 2003/05/15 18:59:36 hobbs Exp $
+RCS: @(#) $Id: README,v 1.49.2.2 2003/07/15 22:25:32 dgp Exp $
 
 Contents
 --------
