@@ -1,11 +1,11 @@
 Tcl/Tk 8.4 for Windows, Binary Distribution
 
-RCS: @(#) $Id: README.binary,v 1.33.2.1 2003/05/15 18:59:39 hobbs Exp $ 
+RCS: @(#) $Id: README.binary,v 1.33.2.2 2003/07/15 22:25:33 dgp Exp $ 
 
 1. Introduction
 --------------- 
 
-This directory contains the binary distribution of Tcl/Tk 8.4.3 for
+This directory contains the binary distribution of Tcl/Tk 8.4.4 for
 Windows.  It was compiled with Microsoft Visual C++ 6.0 using Win32
 API, so that it will run under Windows NT, 95, 98 and 2000.
 
