@@ -4,6 +4,17 @@
 
 2003-07-15  Don Porter  <dgp@users.sourceforge.net>
 
+	* README:		Bumped patch level to 8.4.4 in anticipation
+	* generic/tcl.h:	of another patch release.
+	* tools/tcl.wse.in:
+	* unix/configure.in:
+	* unix/tcl.spec:
+	* win/README.binary:
+	* win/configure.in:
+
+	* unix/configure:	autoconf (2.13)
+	* win/configure:
+
 	* generic/tclCompCmds.c (TclCompileIfCmd):  Prior fix of Bug 711371
 	on 2003-04-07 introduced a buffer overflow.  Corrected.  [Bug 771613]
 
